--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body, html {
   width: 90vw;
   max-width: 600px;
   height: 80vh;
+  max-height: 600px;
   transform: translate(-50%, -50%);
   border-radius: 25px;
   padding: 20px;
